--- a/views/admin/productOffers.hbs
+++ b/views/admin/productOffers.hbs
@@ -57,7 +57,7 @@
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="subm" class="btn btn-primary" >Save changes</button>
+                      <button type="submit" class="btn btn-primary" >Save changes</button>
                     </div>
                     </form>
                   </div>
@@ -66,7 +66,6 @@
 </main>
 
 <script>
-
     function addOfferModal(id){
     $('#verticalycentered').modal('show'); 
     $('#offerForm').submit((e)=>{
@@ -75,7 +74,7 @@
         $.ajax({
             url : '/admin/addProductOffer',
             method :'post',
-            data : {offerPercentage, id},
+            data : {offerPercentage,id},
             success :(response)=>{
                 if(response.status)
                 {
